--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Model Viewer</title>
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-</head>
-<body>
+    <script
+      type="module"
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
+    ></script>
+  </head>
+  <body>
+    <model-viewer
+      src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+      alt="A 3D model of a chair"
+      ar
+      auto-rotate
+      camera-controls
+    ></model-viewer>
+    <model-viewer
+      src="./models/Chair.glb"
+      alt="A 3D model of a chair"
+      ar
+      auto-rotate
+      camera-controls
+    ></model-viewer>
 
-    <model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-              alt="A 3D model of a chair"
-              ar
-              auto-rotate
-              camera-controls></model-viewer>
-              <model-viewer src="./models/Chair.glb"
-              alt="A 3D model of a chair"
-              ar
-              auto-rotate
-              camera-controls></model-viewer>
-      
-</body>
+    <model-viewer src="chair2.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
+        <div class="progress-bar hide" slot="progress-bar">
+            <div class="update-bar"></div>
+        </div>
+        <button slot="ar-button" id="ar-button">
+            View in your space
+        </button>
+        <div id="ar-prompt">
+            <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
+        </div>
+    </model-viewer>
+    
+  </body>
 </html>
