--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       camera-controls
     ></model-viewer>
 
-    <model-viewer src="chair2.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
+    <model-viewer src="./models/chair2.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
         <div class="progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
         </div>
