--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Model Viewer</title>
+    <link rel="stylesheet" href="css/style.css">
     <script
       type="module"
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
     ></script>
   </head>
   <body>
-    <model-viewer
-      src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-      alt="A 3D model of a chair"
-      ar
-      auto-rotate
-      camera-controls
-    ></model-viewer>
+    <section class="header"> 
+        <img src="./images/cover.jpg" width="100%" height="550px">
+
+    </section>
     <model-viewer
       src="./models/Chair.glb"
       alt="A 3D model of a chair"
