--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="header"> 
-        <img src="./images/cover.jpg" width="100%" height="550px">
+        <img src="./images/cover.jpg" width="100%" height="100%">
 
     </section>
     <model-viewer
