--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <button slot="ar-button" id="ar-button">
                 View in your space
             </button>
+            <div class="annotation">This annotation is fixed in screen-space</div>
             
         </model-viewer>
         
