--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
       </div>
       <div class="product">
-        <model-viewer src="./models/table.glb"  camera-controls poster="poster.webp" shadow-intensity="1" environment-image="legacy" skybox-image="legacy" shadow-softness="1">
+        <model-viewer src="./models/table.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" shadow-softness="1">
           <button class="Hotspot" slot="hotspot-1" data-position="-0.9343122932930492m 3.228618929170587m 0.8658485519121756m" data-normal="2.4551127681295824e-7m 0.9999999999999434m -2.3051986767980987e-7m" data-visibility-attribute="visible">
               <div class="HotspotAnnotation">Spacious multi layered racks</div>
           </button>
@@ -80,6 +80,7 @@
               <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
           </div>
       </model-viewer>
+      
       
         <h3> Office Chair</h3>
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
