--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           alt="A 3D model of a chair"
           ar
           auto-rotate
-          camera-controls
+          camera-controls shadow-intensity="2" shadow-softness="1"
         ></model-viewer>
         <h3> Office Chair</h3>
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
@@ -71,7 +71,7 @@
           alt="A 3D model of a chair"
           ar
           auto-rotate
-          camera-controls
+          camera-controls shadow-intensity="2" shadow-softness="1"
         ></model-viewer>
         <h3> Office Chair</h3>
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
