--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <script
       type="module"
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
-    ></script>
+    >
+  
+    (() => {
+      const modelViewer = document.querySelector('table');
+      const orbitCycle = [
+        '45deg 55deg 4m',
+        '-60deg 110deg 2m',
+        modelViewer.cameraOrbit
+      ];
+
+      setInterval(() => {
+        const currentOrbitIndex = orbitCycle.indexOf(modelViewer.cameraOrbit);
+        modelViewer.cameraOrbit =
+          orbitCycle[(currentOrbitIndex + 1) % orbitCycle.length];
+      }, 3000);
+    })();
+ 
+
+  </script>
   </head>
   <body>
     <section class="header">
@@ -66,12 +84,12 @@
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
       </div>
       <div class="product">
-        <model-viewer class="model"
+        <model-viewer id ="table"class="model"
           src="./models/table.glb"
           alt="A 3D model of a chair"
           ar
           auto-rotate
-          camera-controls shadow-intensity="2" shadow-softness="1"
+          camera-controls shadow-intensity="2" shadow-softness="1" interpolation-decay="200"
         ></model-viewer>
         <h3> Office Chair</h3>
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
