--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     >
   
     (() => {
-      const modelViewer = document.querySelector('table');
+      const modelViewer = document.querySelector('#table');
       const orbitCycle = [
         '45deg 55deg 4m',
         '-60deg 110deg 2m',
