--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
     >
   
+</script>
+
+<script>
     (() => {
       const modelViewer = document.querySelector('#table');
       const orbitCycle = [
@@ -24,9 +27,10 @@
           orbitCycle[(currentOrbitIndex + 1) % orbitCycle.length];
       }, 3000);
     })();
- 
 
   </script>
+ 
+
   </head>
   <body>
     <section class="header">
