--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             
         </model-viewer>
         
-        <h3> Office Chair</h3>
+        <h3> Luxury Chair</h3>
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
       </div>
       <div class="product">
@@ -84,7 +84,7 @@
           auto-rotate
           camera-controls shadow-intensity="2" shadow-softness="1"
         ></model-viewer>
-        <h3> Office Chair</h3>
+        <h3> Sofa </h3>
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
       </div>
       <div class="product">
@@ -95,7 +95,7 @@
           auto-rotate
           camera-controls shadow-intensity="2" shadow-softness="1" interpolation-decay="200"
         ></model-viewer>
-        <h3> Office Chair</h3>
+        <h3> Home Office Table</h3>
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
       </div>
     </section>
