--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
           ar
           auto-rotate
           camera-controls shadow-intensity="2" shadow-softness="1" interpolation-decay="200"
-        ></model-viewer>
+        >
+        <button class="view-button" slot="hotspot-0" data-position="-0.0569m 0.0969m -0.1398m" data-normal="-0.5829775m 0.2863482m -0.7603565m" data-orbit="-50.94862deg 84.56856deg 0.06545582m" data-target="-0.04384604m 0.07348397m -0.1213202m">
+          The Book
+        </button>      
+      </model-viewer>
         <h3> Home Office Table</h3>
         <p> Adjust the height and angle to sit really comfortably, and let the game begin. </p>
       </div>
