--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <div class="product">
         <model-viewer class="model" id="sofa" src="./models/sofa.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1.09">
           
-          <button class="view-button" slot="hotspot-6" data-position="-0.6456366208091193m 0.8508616246995984m 0.6510005148827513m" data-normal="-2.2499801358321176e-7m -0.9999999999998964m -3.9611291538258726e-7m" data-visibility-attribute="visible">
+          <button class="view-button" slot="hotspot-6" data-position="-0.6456366208091193m 0.8508616246995984m 0.6510005148827513m" data-normal="-2.2499801358321176e-7m -0.9999999999998964m -3.9611291538258726e-7m" data-orbit="65.94862deg 60.56856deg 0.09545582m" data-visibility-attribute="visible">
             <div class="HotspotAnnotation">Long-lasting comfort</div>
         </button>
           <div class="progress-bar hide" slot="progress-bar">
