--- a/index.html
+++ b/index.html
@@ -198,6 +198,11 @@
       <img src="./images/cover.jpg" width="100%" height="100%" />
     </section>
     <h2> Gallery</h2>
+    <section class="header">
+      <h2> See in Your Space </h2>
+      <img src="" width="100%" height="100%" />
+    </section>
+   
     <section class="gallery">
       <div class="product">
         <model-viewer class="model" src="./models/Chair.glb" ar ar-modes="webxr" ar-scale="fixed" camera-orbit="-30deg auto auto" max-camera-orbit="auto 100deg auto" shadow-intensity="1" camera-controls touch-action="pan-y" 
